Alfajor Release History
=======================


0.1 (June 24th, 2010)
---------------------

 - Initial public alpha release.