@@ -7,4 +7,4 @@ Contributors are:
 - Dan Colish <dcolish@gmail.com>
 - Craig Dennis
 - Michel Pelletier
-- Scott Wilson
+- Scott Wilson <scott.wilson@gmail.com>
