@@ -114,6 +114,66 @@ class WSGIManager(object):
         logger.debug("Destroying in-process WSGI browser.")
 
 
+class NetworkManager(object):
+    """TODO
+
+    server_url
+    cmd
+    ping-address
+
+    """
+
+    def __init__(self, frontend_name, backend_config, runner_options):
+        self.config = backend_config
+        self.runner_options = runner_options
+        self.process = None
+        self.browser = None
+        self.server_url = self._config('server_url', False)
+        if not self.server_url:
+            raise RuntimeError("'server_url' is a required configuration "
+                               "option for the Network backend.")
+
+    def _config(self, key, *default):
+        override = self.runner_options.get(key)
+        if override:
+            return override
+        if key in self.config:
+            return self.config[key]
+        if default:
+            return default[0]
+        raise LookupError(key)
+
+    def create(self):
+        from alfajor.browsers.network import Network
+
+        base_url = self.server_url
+        if (self._config('without_server', False) or
+            not self._config('cmd', False)):
+            logger.debug("Connecting to existing URL %r", base_url)
+        else:
+            logger.debug("Starting service....")
+            self.process = self.start_subprocess()
+            logger.debug("Service started.")
+        self.browser = Network(base_url)
+        return self.browser
+
+    def destroy(self):
+        if self.process:
+            self.process.stop()
+        # avoid irritating __del__ exception on interpreter shutdown
+        self.process = None
+        self.browser = None
+
+    def start_subprocess(self):
+        cmd = self._config('cmd')
+        ping = self._config('ping-address', None)
+
+        logger.info("Starting server sub process with %s", cmd)
+        process = ServerSubProcess(cmd, ping)
+        process.start()
+        return process
+
+
 class ZeroManager(object):
     """Lifecycle manager for global Zero browsers."""
 
