@@ -3,12 +3,18 @@ default+browser=wsgi
 
 [self-tests]
 wsgi=wsgi
+network=network
 *=selenium
 zero=zero
 
 [self-tests+browser.wsgi]
 server-entry-point = tests.browser.webapp:webapp()
 base_url = http://localhost
+
+[self-tests+browser.network]
+cmd = alfajor-invoke tests.browser.webapp:run
+server_url = http://localhost:8008
+ping-address = localhost:8008
 
 [self-tests+browser.selenium]
 cmd = alfajor-invoke tests.browser.webapp:run
